# entrenar

./: .clippy.toml  .env.example  .gitignore  .pmat-baseline.json  .pmat-gates.toml  .pmat-metrics.toml  .pmat.yaml  .pmatignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOLDEN_TRACE_INTEGRATION_SUMMARY.md  Makefile  PROJECT_STATUS.md  README.md  RELEASE_v0.1.0.md  build.rs  checkpoints  deny.toml  docker-compose.yml  example_model.json  example_model.yaml  fix_yamls.sh  generate_parquet.py  justfile  prepare_data.sh  roadmap.yaml  run_qa_rest.sh  run_section_a.sh  run_sections_b_c.sh
.cargo/: config.toml
.dvc/: .gitkeep
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: book.yml  ci.yml  clippy-lint.yml  nightly.yml  quality.yml
.pmat/: baseline.json  coverage-cache.json  file-health-baseline.json  project.toml  tdg-baseline.json  tdg_history.json
.pmat-metrics/: commit-06a0931-meta.json  commit-1b6b308-meta.json  commit-7c72c6a-meta.json  commit-cda6a4a-meta.json  commit-e6d75a8-meta.json  deny-status.json  gui-coverage.json  lint-status.json
.pmat-tickets/: DEBT-COV-20260214175507.yaml  DEBT-SIZE-20260214175507.yaml
.pmat-work/PMAT-172/: contract.json
.pv/: lint-previous.json
benches/: monitor_bench.rs
book/: BOOK_UPDATE_SUMMARY.md
book/.pmat/: project.toml
book/book/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
book/src/: SUMMARY.md  introduction.md
checkpoints/: final_model.json
checkpoints/ckpt/: final_model.json
config/: residency.yaml
contracts/: backward-pass-v1.yaml  batch-v1.yaml  checkpoint-v1.yaml  gemm-v1.yaml  lora-v1.yaml  matmul-v1.yaml  optimizer-v1.yaml  quantization-v1.yaml  softmax-v1.yaml  tokenizer-v1.yaml  training-loop-v1.yaml
crates/burn-canary/: Cargo.toml
crates/entrenar-bench/: Cargo.toml
crates/entrenar-bench/benches/: sweep_benchmarks.rs
crates/entrenar-bench/src/: cost.rs  lib.rs  main.rs  stats.rs  strategies.rs  sweep.rs
crates/entrenar-common/: Cargo.toml
crates/entrenar-common/src/: cli.rs  error.rs  lib.rs  output.rs  progress.rs
crates/entrenar-distill/: Cargo.toml
crates/entrenar-distill/src/: config.rs  lib.rs  main.rs  pipeline.rs  validation.rs  weights.rs
crates/entrenar-inspect/: Cargo.toml
crates/entrenar-lora/: Cargo.toml
crates/entrenar-lora/src/: lib.rs  main.rs  memory.rs  merge.rs  optimizer.rs
crates/entrenar-shell/: Cargo.toml
crates/entrenar-shell/src/: commands.rs  lib.rs  main.rs  repl.rs  state.rs
crates/entrenar-wasm/: Cargo.toml
data/: README.md  inventory.yaml  train.csv  train.parquet
datasheets/: DATASHEET.md
docs/: 100-point-qa-checklist.md  ENTRENAR-TUI-SPEC-001.md  ENV_VARS.md  data-catalog.md  design-by-contract.md  llama-implementation-summary.md  llama-integration-complete.md  lora-qlora-enhancement.md  mutation-testing-ent-008.md  phase3-progress.md  quality-metrics-final.md
docs/book/: citl.md  huggingface-distillation.md  real-time-monitoring.md
docs/qa-reports/: qa-verification-report-v1.8.0.md
docs/reviews/: hugging-face-distill-learn-pipeline-review.md  monitoring-spec-review.md
docs/roadmaps/: cli-implementation-epic.yaml  mlops-enhancements-epic.yaml  qa-fixes-epic.yaml  roadmap.yaml  yaml-mode-qa-epic.yaml
docs/specifications/: auto-tune.md  causal-attention-mask-spec.md  citl-generalization-spec.md  comprehensive-cargo-run-examples-demos-all-features-with-toyota-way-style-qa-process.md  comprehensive-qa-falsification.md  enhancements-dec-2025-mlops-spec.md  ent-gguf-export-spec.md  entrenar-spec.md  experiment-tracking-spec.md  fine-tune-rust-test-gen.md  gpu-sharing-spec.md  hugging-face-distill-learn-pipeline-spec.md  llama-ideas-inclusion-spec.md  model-eval-framework-spec.md  paiml-sai-vision-sync.md  real-time-audit-log-explainability-apr-format-models.md  real-time-terminal-monitoring-visualization-spec.md  simplify-entrenar.md  sub-crate-demos-spec.md  training-monitoring-spec-realtime-and-diagnostics.md  weight-initialization-spec.md  world-class-mlops-survey.md  yaml-mode-train.md
docs/work-items/: experiment-tracking-epic.yaml
emc/: README.md
examples/: README.md  calibration_check.rs  citl.rs  classify_tune_demo.rs  cli_audit.rs  cli_bench.rs  cli_inspect.rs  cli_monitor.rs  cluster_training.rs  config.yaml  contract_pipeline_demo.rs  cuda_backend.rs  cuda_training_benchmark.rs  design_by_contract.rs  distillation.rs  drift_simulation.rs  encoder_linear_probe.rs  explainability.rs  finetune_real.rs  finetune_test_gen.rs  gemm_bench.rs  gpu_ledger.rs  hf_distillation.rs  inference_monitor.rs  merge_models.rs  mnist_train.rs  mnist_train_gpu.rs  model_io.rs  monitoring.rs  multi_adapter_training.rs  nvml_test.rs  open_asr_leaderboard.rs  profile_cuda_trainer.rs  pruning_pipeline.rs  research.rs  shell_safety_classify.rs  sovereign.rs  ssc_eval.rs  ssc_preflight.rs  train_from_yaml.rs  (+6 more)
examples/llama2/: README.md  architecture.rs  finetune_lora.rs  finetune_qlora.rs  memory_benchmarks.rs  train.rs
fuzz/: README.md
golden_traces/: ANALYSIS.md
infra/: network.yaml
model_card/: MODEL_CARD.md
models/: README.md
output/: final_model.json
pkg/: entrenar_monitor.d.ts
scripts/: benchmark_cuda_training.py  check_publish_safety.sh
src/: aprender_compat.rs  error.rs  generated_contracts.rs  inference.rs  lib.rs  main.rs  numerical.rs  pipeline.rs  run.rs  safety.rs  sovereign_array.rs  trace.rs  training.rs  verification_specs.rs
templates/: flake.nix.template
tests/: chaos_llama.rs  contract_traits.rs  cuda_cublas_parity.rs  distributed_integration.rs  gradient_llama.rs  integrity_test.rs  llm_training_integration.rs  loss_function_accuracy.rs  mutation_resistant_llama.rs  normalization_correctness.rs  probar_tui_compliance.rs  property_curriculum.rs  property_eval.rs  property_llama.rs  quality_test.rs  run_tracing_test.rs  storage_test.rs  tui_snapshot_test.rs  wgpu_cuda_parity.rs  yaml_mode_integration.rs
wasm-pkg/: demo.js  index.html  package.json  playwright.config.ts
(+1507 files in other folders)
