[package]
name = "entrenar"
version = "0.1.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "Training & Optimization library with autograd, LoRA, quantization, and model merging"
repository = "https://github.com/paiml/entrenar"
license = "MIT"
keywords = ["machine-learning", "neural-networks", "autograd", "lora", "quantization"]
categories = ["science", "mathematics"]

[dependencies]
# Core PAIML stack
ndarray = "0.16"
trueno = "0.4.1"  # SIMD-accelerated compute
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4"
approx = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[[bin]]
name = "entrenar"
path = "src/main.rs"
required-features = []
