[package]
name = "entrenar-common"
version = "0.2.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "Shared infrastructure for entrenar CLI tools"
license = "MIT"
repository = "https://github.com/paiml/entrenar"

[lib]
name = "entrenar_common"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trueno-viz = { version = "0.1.1", features = ["terminal"] }

[dev-dependencies]
proptest = "1.4"
