[package]
name = "entrenar-distill"
version = "0.1.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "End-to-end knowledge distillation CLI"
license = "MIT"
repository = "https://github.com/paiml/entrenar"

[lib]
name = "entrenar_distill"
path = "src/lib.rs"

[[bin]]
name = "entrenar-distill"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
entrenar = { path = "../.." }
entrenar-common = { path = "../entrenar-common" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
assert_cmd = "2"
predicates = "3"
