[package]
name = "entrenar-lora"
version = "0.1.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "LoRA/QLoRA configuration optimizer and memory planner"
license = "MIT"
repository = "https://github.com/paiml/entrenar"

[lib]
name = "entrenar_lora"
path = "src/lib.rs"

[[bin]]
name = "entrenar-lora"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
entrenar = { version = "0.5.0", path = "../.." }
entrenar-common = { version = "0.1.0", path = "../entrenar-common" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
assert_cmd = "2"
predicates = "3"
