[package]
name = "entrenar-shell"
version = "0.1.0"
edition = "2021"
authors = ["PAIML <hello@paiml.com>"]
description = "Interactive REPL for HuggingFace model exploration and distillation"
license = "MIT"
repository = "https://github.com/paiml/entrenar"

[lib]
name = "entrenar_shell"
path = "src/lib.rs"

[[bin]]
name = "entrenar-shell"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
entrenar = { version = "0.2.2", path = "../.." }
entrenar-common = { version = "0.1.0", path = "../entrenar-common" }
clap = { version = "4.5", features = ["derive"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
dirs = "5.0"

[dev-dependencies]
proptest = "1.4"
tempfile = "3.8"
